RESOLVED FIXED313322
[AppKit Gestures] Gesture recognizer driven inputs can stop working after web content process crash
https://bugs.webkit.org/show_bug.cgi?id=313322
Summary [AppKit Gestures] Gesture recognizer driven inputs can stop working after web...
Abrar Rahman Protyasha
Reported 2026-04-25 16:03:31 PDT
We have a lot of local state tracking in WKAppKitGestureController that is never reset, so a WCP crash could put the UI process side controller in a bad state.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-25 16:03:37 PDT
Abrar Rahman Protyasha
Comment 2 2026-04-25 16:15:43 PDT
EWS
Comment 3 2026-04-25 21:33:56 PDT
Committed 312030@main (5878eac344c5): <https://commits.webkit.org/312030@main> Reviewed commits have been landed. Closing PR #63603 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.