[AppKit Gestures] Gesture recognizer driven inputs can stop working after web content process crash https://bugs.webkit.org/show_bug.cgi?id=313322 rdar://175599268

Reviewed by Richard Robinson.

There is a bunch of local state tracked within the UI process bound
AppKit gesture controller that we fail to clear when the web content
process terminates, which would leave the controller in a stale state.
For example, if the web content process crashed during an on-going drag
gesture, it would permanently suppress mouse tracking.

To remedy this, we add a reset method that clears all process-dependent
state and have it called from WebViewImpl::handleProcessSwapOrExit().

* Source/WebKit/UIProcess/mac/WKAppKitGestureController.h:
* Source/WebKit/UIProcess/mac/WKAppKitGestureController.mm:
(-[WKAppKitGestureController reset]):
* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::handleProcessSwapOrExit):

Canonical link: https://commits.webkit.org/312030@main